# newsletters-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SETUP.md  latest_summary.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  setup.cfg  test_config.py  test_gmail.py  test_gmail_ai_debug.py  test_gmail_simple.py
scripts/: gmail_auth.py
src/: cli.py
src/agents/: base_agent.py  content_summarizer.py  email_collector.py  newsletter_detector.py  orchestrator.py  scheduler.py
src/api/: main.py
src/api/routes/: emails.py  summaries.py
src/db/: database.py  models.py
src/models/: email.py  newsletter.py  summary.py
src/services/: ai_service.py  gmail_service.py  outlook_service.py
src/utils/: config.py  exceptions.py  helpers.py  logger.py
tests/: README.md  __init__.py  test_config.py  test_email_sending.py  test_gmail_connection.py  test_gmail_integration.py  test_integration.py  test_outlook_connection.py
